add reset and clear buttons functions

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <form action="" class="startForm">
             <h2>Player names:</h2>
             <label for="player1">Player 1:</label>
-            <input type="text" id="player1" placeholder="Jhon">
+            <input type="text" id="player1" placeholder="Jhon" required>
             <label for="player2">Player 2:</label>
-            <input type="text" id="player2" placeholder="Jhon">
+            <input type="text" id="player2" placeholder="Jhon" required>
             <button type="submit">Confirm</button>
         </form>
     </dialog>
