--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <label for="player1">Player 1:</label>
             <input type="text" id="player1" placeholder="Jhon" required>
             <label for="player2">Player 2:</label>
-            <input type="text" id="player2" placeholder="Jhon" required>
+            <input type="text" id="player2" placeholder="Lennon" required>
             <button type="submit">Confirm</button>
         </form>
     </dialog>
